# alu-education-agent

./: .env.example  .gitignore  LICENSE  README.md  config.py  llm_provider.py  logger.py  main.py  pyproject.toml  requirements.txt
agent/: agent_graph_dll.py  travel_agent.py
agent_os/: cli_driver.py  graph.py
app_local/: README.md  main.py
app_local/config/: settings.py
app_local/core/: block_detector.py  scheduler.py
app_local/memory/: metadata_links.json
app_local/mmu/: block_factory.py  cache_l1.py  controller.py
app_local/runtime/: agent.py
app_local/storage/: lance_driver.py  local_manifest.json
app_local/sync/: sync_manager.py
app_local/teu/: tools.py
app_local/ui/: dashboard.py
apu/core/: block_detector.py  pipeline.py  scheduler.py
apu/mmu/: block_factory.py  cache_l1.py  controller.py
apu/storage/: letta_driver.py  sync_util.py  weaviate_driver.py
apu/teu/: controller.py  tools.py
cloud_registry/: README.md  storage_client.py
cloud_registry/config/: curriculum.yaml  settings.py
cloud_registry/courses/prompts/: 5eme.txt  (+5 more)
cloud_registry/pipeline/: batch_pipeline.py  embedding_pipeline.py  manifest_generator.py  prompt_exporter.py  schema_setup.py
cloud_registry/registry/: 5eme_english_v1.parquet  5eme_history_v1.parquet  5eme_math_v1.parquet  6eme_english_v1.parquet  6eme_history_v1.parquet  6eme_math_v1.parquet  manifest.json
dashboard/: app.py  apu_dashboard.py
memory/: block_detector.py  block_factory.py  context_compiler.py  dll_manager.py  letta_cloud_client.py  schema.py  sync_memory.py  weaviate_cloud_client.py
(+29 files in other folders)
