[project]
name = "ux-driven-agent-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.6",
    "langchain>=1.2.12",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.1.2",
    "letta>=0.16.6",
    "python-dotenv>=1.2.2",
    "streamlit>=1.55.0",
    "streamlit-chat>=0.1.1",
    "uvicorn>=0.41.0",
    "watchdog>=6.0.0",
    "weaviate-client>=4.20.4",
]

[tool.uv.workspace]
members = ["travel-agent-dll"]
